Add IController